--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,11 @@
   "version": "0.0.0",
   "type": "module",
 "scripts": {
-  "start": "vite",
   "dev": "vite",
   "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview"
+  "preview": "vite preview",
+  "start": "vite preview",
+  "lint": "eslint ."
 },
 
   "dependencies": {
